2004-09-18	blytkerchan
	* Makefile.in.in [real_all]: make all programs have a .exe extention
	when building - to avoid conflicts with directory names
	* bootstrap.sh (gen_link_mk): reflect above

2004-09-17	blytkerchan
	* bootstrap.sh: rename from bootstrap

	* config.sub: new file
	* config.guess: ditto
	* install-sh: ditto
	* Makefile.in.in [MODULES]: add $$__MODULES__$$ bootstrap variable
	[real_all]: add $(PROGRAMS) as a dependency
	* bootstrap (gen_makefile_in): generate $$__MODULES__$$ bootstrap var
	(main-level code): don't locate & copy install-sh: it's in CVS now

2004-09-16	blytkerchan	towards a working build
	* Makefile.in.in: remove all references to libtool
	* bootstrap (gen_link_mk): use $(OBJ) in stead of $(OBJS)
	remove all references to libtool and autoheader
	* configure.ac.in: remove all references to automake and libtool
	* depend.sh: new file

	* bootstrap: new file
	* configure.ac.in: ditto
	* Makefile.in.in: ditto

2004-09-06	blytkerchan
	* i386/: new directory
