@@ -10,7 +10,6 @@ AC_SUBST(ARCH, ${host_cpu})
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_CPP
-AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
@@ -18,20 +17,12 @@ AC_PROG_MAKE_SET
 # Checks for libraries.
 
 # Checks for header files.
-AC_HEADER_STDC
-AC_CHECK_HEADERS([stdint.h stdlib.h string.h strings.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
-#AC_HEADER_STDBOOL
 AC_C_CONST
-AC_TYPE_SIZE_T
 AC_C_BIGENDIAN
 
 # Checks for library functions.
-dnl AC_FUNC_MALLOC
-AC_FUNC_MEMCMP
-AC_CHECK_FUNCS([memset strchr strdup])
-AC_REPLACE_FUNCS([strlwr])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
